# agent_orchestrator_template

./: .gitignore  OtterAI.spec  README.md  TODO.md  agent_configuration_plan.md  banner.txt  config.yaml  config_dashboard.py  create_agent.py  documentation.md  implementation.md  launcher.py  main.py  main_test.py  pyproject.toml  run.sh  sample_config.yaml  system_understanding.md  test.py  test_server.py
api/: server.py
core/: __init__.py  agent.py  audio_tools.py  config_loader.py  conversation_summarizer.py  history.py  history_sqlite.py  image_tools.py  job_logger.py  llm.py  mcp_loader.py  mcp_server.py  memory.py  memory_rag.py  memory_sqlite.py  session_manager.py  skill_loader.py
custom_config/: agent_github_config.yaml  rag_config.yaml
docs/: README.md  mcp-server.md
frontend/app/: layout.tsx  page.tsx
frontend/components/: AnalyticsArea.tsx  ChatArea.tsx  SettingsModal.tsx  Sidebar.tsx
frontend/types/: index.ts
service_config/: agent_github_config.yaml  notify_config.yaml  rag_config.yaml  sample_notify_config.yaml  sample_rag_config.yaml
service_config/workers/: agent_communication_config.yaml
