# =============================================================================
# pyproject.toml — Agent_head (Main Autonomous Orchestrator)
# =============================================================================

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "agent-head"
version         = "1.0.0"
description     = "Main autonomous orchestrator agent that coordinates sub-worker agents via MCP."
readme          = "README.md"
license         = "MIT"
requires-python = ">=3.10"
authors         = [{ name = "Tharindumendis" }]
keywords        = [
    "agent", "orchestrator", "langgraph", "langchain",
    "mcp", "fastmcp", "autonomous-agent", "multi-agent",
]

dependencies = [
    # Core LangChain + LangGraph
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # MCP SDK (client and server support)
    "mcp>=1.0.0",
    # LangChain → MCP tool adapter
    "langchain-mcp-adapters>=0.1.0",
    # Config / utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # API server (optional but included by default)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "prompt-toolkit>=3.0.52",
    "colorama>=0.4.6",
]

[project.scripts]
agent-head = "main:_cli_entry"
agent-api  = "api.server:main"
agent-mcp  = "core.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML",
]

# ---------------------------------------------------------------------------
# Hatch build config
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.hatch.build.targets.wheel.force-include]
"main.py"     = "main.py"
"config.yaml" = "config.yaml"
"service_config"  = "service_config"

[tool.hatch.build.targets.sdist]
include = [
    "core/",
    "main.py",
    "config.yaml",
    "README.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length    = 100
src            = [".", "core"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
